 [1005422] Improve mouse cursol Grub when 2 buttons-mouse use (WIN32)
           (TODO: improved japanese keyboard support)

- patches applied
  - patch.rombios.markevich (Start/Stop Wait Timer) (Kory Markevich)
  - patch.apic-zwane (APIC fixes) (Zwane Mwaikambo)
  - patch.v8086-exception.lightcone (LightCone)

- these S.F. bugs were closed
 #1157124 Bochs doesn't run with large amounts of memory in bochsrc 
 #1154266 weird INT handling in V86 mode
 #1157051 default Bochs CVS doesn't work-out-of-the-box
  #923954 enter() with level > 0, >>PANIC<< iret: return CS selector
 #1098476 Privilege Problem after SYSEXIT
 #1121734 Bochs crashes when shutting down Win95 
 #1099294 VESA for Win98 bogus
 #1112836 PGE-Bit crashes Bochs
  #947586 The specification difference in x86-64 emulation
 #1117145 Push reset Button, APIC0 Error occur 
 #1123043 fpu stack pointer changed *despite* fault occured (e.g. #pf)
 #1122066 PANIC: iret: IP > descriptor limit when installing os/2 warp 
  #809574 rm -f segfaults
  #593952 SuSE rm segfaults
  #929783 floppy not recogniced since 2.1
 #1099298 SB16 for Win98 Bogus
 #1079483 Reading from a CDRW 
  #549793 flaw in interrupt gate handling(exception.cc)
  #692055 SMP Error
  #805479 Booting from disk causes illegal instruction warnings
  #909677 pc-speaker doesn't work 
  #831751 behaviour unrealistic
  #661213 CR4.TSD is broken
  #685508 PANIC: prefetch: RIP > CS.limit 
 #1037923 Non-executable page support missed (NX bit, x86-64)
 #1106530 wrong disassemble result 
 #1105208 drive order for boot gets saved wrong
  #661060 Problem with Win98SE
  #837377 Norton Ghost don't boot
  #876689 Unknown register 0x17 [CPU] / WIN98SE
  #947282 Bochs segfault
  #963317 Persistent Win98SE  
 #1101168 APIC base address change
  #680737 panic when installing winme
 #1097187 Install FC3 on bochs-win failed
  #875461 vgabios-lgpl should be default
  #594797 Bochs segfaults
  #602994 bochs breaks boot kernel
  #571539 FreeBSD Install from CD Fails